fixed mobile spacing / height issue

--- a/src/_scss/_base.scss
+++ b/src/_scss/_base.scss
@@ -24,13 +24,13 @@ h1,h2,h3,h4,h5,h6{
 
 h1{
   margin-top: 0;
-  font-size: 1.9rem;
+  font-size: 1.5rem;
   font-weight: 900;
   color: $primary-color;
   letter-spacing: normal;
 
   &.large{
-    font-size: 3.5rem;
+    font-size: 3rem;
     text-align: center;
 
     @media screen and (min-width: $desktop-breakpoint){
