--- a/src/_scss/_forms.scss
+++ b/src/_scss/_forms.scss
@@ -6,7 +6,7 @@ form{
   }
 
   &.landing-page-form{
-    margin: auto;
+    margin: 0 auto 2rem;
   }
 }
 
